[tool.poetry]
name = "va-downloader"
version = "0.1.0"
description = ""
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
